DigicielFull/force-app/main/default/objects/Case_Update__c/Case_Update__c.object-meta.xml
<CustomObject>
    <label>Case Update</label>
    <nameField>
        <displayFormat>CUpdate-{0000}</displayFormat>
        <label>Case Update Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>