DigicielFull/force-app/main/default/objects/Case_Update__c/fields/Case_Status_Updated__c.field-meta.xml
<CustomField>
    <fullName>Case_Status_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Status Updated</label>
    <type>Checkbox</type>
</CustomField>