DigicielFull/force-app/main/default/objects/Case_Update__c/fields/Case_Update__c.field-meta.xml
<CustomField>
    <fullName>Case_Update__c</fullName>
    <label>Case Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>