DigicielFull/force-app/main/default/objects/Case_Update__c/fields/Notify_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Notify_Account_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Account Manager</label>
    <type>Checkbox</type>
</CustomField>