DigicielFull/force-app/main/default/objects/Case_Update__c/fields/Notify_External_Contact__c.field-meta.xml
<CustomField>
    <fullName>Notify_External_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify External Contact</label>
    <type>Checkbox</type>
</CustomField>