DigicielFull/force-app/main/default/objects/Case_Update__c/fields/Notify_Primary_Owner__c.field-meta.xml
<CustomField>
    <fullName>Notify_Primary_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Primary Owner</label>
    <type>Checkbox</type>
</CustomField>